<resources>
    <string name="app_name">Manejo Inteligente de Pragas</string>
    <string name="sobre">Sobre o MIP²</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logo">Logo</string>
    <string name="funcion_rio">Funcionário</string>
    <string name="propriet_rio">Proprietário</string>
    <string name="textview">TextView</string>
    <string name="propriedade_x">Propriedade X</string>
    <string name="salvar">Salvar</string>
    <string name="estado">Estado:</string>
    <string name="ex_fazenda_espera_feliz">Ex: Fazenda Espera Feliz</string>
    <string name="cidade">Cidade:</string>
    <string name="adicionar_propriedade">Adicionar Propriedade</string>
    <string name="funcion_rios">Funcionários</string>
    <string name="x_funcion_rios_cadastrados_na_propriedade">X funcionários cadastrados na propriedade</string>
    <string name="adicionar_cultura">Adicionar Cultura</string>
    <string name="tomate">Tomate</string>
    <string name="x_talh_es">X Talhões</string>
    <string name="dias_para_a_contagem_x">Dias para a contagem:</string>
    <string name="estadopropriedade">Estado:</string>
    <string name="ex_20">Ex: 20</string>
    <string name="plantas_por_talh_o">Plantas por talhão:</string>
    <string name="ex_15">Ex: 15</string>
    <string name="selecionar_cultura">Selecionar Cultura:</string>
    <string name="n_mero_de_talh_es">Número de talhões sugerido:</string>
    <string name="salvarCultura">Salvar</string>
    <string name="nome_da_propriedade">Nome da Propriedade:</string>
    <string name="cidadeProp">Cidade:</string>
    <string name="ex_rio_pomba">Ex: Rio Pomba</string>
    <string name="ddd_telefone">DDD + Telefone (somente números)</string>
    <string name="senhaCadastro">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="confirmar_e_mail">Confirmar E-mail</string>
    <string name="e_mail_cadastro">E-mail</string>
    <string name="nomeCadastro">Nome completo</string>
    <string name="ex_seunome_gmail_com">ex: seunome@gmail.com</string>
    <string name="emailEntrar">Email</string>
    <string name="senhaEntrar">Senha</string>
    <string name="ex_12345678">ex: 12345678</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="jo_o_cleber">João Cleber</string>
    <string name="adicionar_funcion_rio">Adicionar Funcionário</string>
    <string name="foto_funcionario">foto_funcionario</string>
    <string name="nomefuncionario">Nome Funcionário</string>
    <string name="exemplo_gmail_com">exemplo_ex@hotmail.com</string>
    <string name="_32987654321">32987654321</string>
    <string name="remover">Remover</string>
    <string name="adicionar">Adicionar</string>
    <string name="visualizar_pragas_atuantes">Visualizar ou adicionar pragas atuantes</string>
    <string name="realizar_plano_de_amostragem">Realizar plano de amostragem</string>
    <string name="selecionar_m_todo_de_controle">Selecionar método de controle</string>
    <string name="confirmar_utiliza_o_de_m_todo_de_controle">Confirmar utilização de método de controle</string>
    <string name="gerar_relat_rios">Gerar relatórios</string>
    <string name="mudadecor">Mudadecor</string>
    <string name="praga_x">Praga X</string>
    <string name="_10_plantas_infestadas">10 plantas infestadas</string>
    <string name="detalhes">Detalhes</string>
    <string name="adicionar_praga">Adicionar Praga</string>
    <string name="fotodegrilo">fotodegrilo</string>
    <string name="salvarpraga">Salvar</string>
    <string name="selecionar_praga">Selecionar Praga:</string>
    <string name="perfil">Perfil</string>
    <string name="plantas">Plantas</string>
    <string name="pragas">Pragas</string>
    <string name="m_todos_de_controle">Métodos de Controle</string>
    <string name="sobre_o_mip">Sobre o MIP²</string>
    <string name="jos_das_couve">José das couve</string>
    <string name="atualizar_informa_es">Atualizar Informações</string>
    <string name="email_example_gmail_com">Email: example@gmail.com</string>
    <string name="sair">Sair</string>
    <string name="trocar_senha">Trocar senha</string>
    <string name="telefone_99999999999">Telefone: 99999999999</string>
    <string name="tamanho_da_cultura_em_hectares_ex_0_5">Tamanho da sua cultura (em hectare)</string>
    <string name="ex_0_5">Ex: 0.5</string>
    <string name="_1_talh_o">1 Talhão</string>
    <string name="selecionar_pragaPA">Selecionar praga</string>
    <string name="plantas_menu_main">Plantas</string>
    <string name="pragas_menu_main">Pragas</string>
    <string name="m_todos_de_controle_menu_maian">Métodos de Controle</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cultura">Cultura:</string>
    <string name="_01">0</string>
    <string name="titulo">Titulo</string>
    <string name="informa_es_da_praga">Informações da praga</string>
    <string name="selecione_uma_praga_para_realizar_o_plano_de_amostragem">Selecione uma praga para realizar o plano de amostragem</string>
    <string name="n_mero_de_plantas_por_talh_o">Número de plantas por talhão:</string>
    <string name="n_mero_de_pontos_por_talh_o">Número de pontos por talhão:</string>
    <string name="aus_ncia">Ausência</string>
    <string name="_02">0</string>
    <string name="_03">0</string>
    <string name="presen_a">Presença</string>
    <string name="pr_ximo_talh_o">Próximo talhão</string>
    <string name="_04">0</string>
    <string name="n_mero_de_plantas_por_ponto">Número de plantas por ponto:</string>
    <string name="talh_o_anterior">Talhão Anterior</string>
    <string name="planta">Planta:</string>
    <string name="_05">0</string>
    <string name="talh_o">Talhão:</string>
    <string name="_0">0</string>
    <string name="amostragem">Amostragem</string>
    <string name="selecione_depois">Selecionar Depois</string>
    <string name="praga">Praga:</string>
    <string name="controle">Controle:</string>
    <string name="m_todo_de_controle">Métodos de controle:</string>
    <string name="informa_es_do_m_todo">Informações do método</string>
    <string name="aplicar_m_todo">Aplicar Método</string>
    <string name="aplicar_depois">Aplicar Depois</string>
    <string name="pragas_atuantes">Pragas atuantes</string>
    <string name="ver_m_todos_de_controle">Ver métodos de controle</string>
    <string name="ver_inimigos_naturais">Ver inimigos naturais </string>
    <string name="corrigir">Corrigir</string>
    <string name="informa_o_sobre_amostragem">Informação sobre amostragem</string>
    <string name="imageminfo">ImagemInfo</string>
    <string name="ver_pragas_chave">Ver pragas-chave</string>
    <string name="popula_o_de_pragas_por_contagem">População de pragas por contagem</string>
    <string name="planos_de_amostragem_realizados">Planos de amostragem realizados</string>
    <string name="caldas_aplicadas">Caldas aplicadas</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="selecione_uma_praga_para_visualizar_o_relat_rio">Selecione uma praga para visualizar o relatório:</string>
    <string name="data">Data:</string>
    <string name="plantas_amostradas">Plantas amostradas:</string>
    <string name="plantas_infestadas">Plantas infestadas:</string>
    <string name="nomecientifico">nomeCientifico</string>
    <string name="digite_o_e_mail_para_recuperar_a_senha">Digite o e-mail para recuperar a senha:</string>
    <string name="enviar_requisi_o">Enviar requisição</string>
    <string name="popula_o_de_pragas_por_aplica_o">População de pragas por aplicação</string>
    <string name="autor">Autor:</string>
    <string name="data_de_aplica_o">Data de aplicação:</string>
    <string name="m_todo_aplicado">Método aplicado:</string>
    <string name="aplica_es_realizadas">Aplicações realizadas</string>
    <string name="seuemail_exemplo_com">seuEmail@exemplo.com</string>
    <string name="sobre_o_mipii">Sobre o MIP</string>
    <string name="aplicar_m_todo_que_n_o_est_na_base_de_dados">Aplicar método que não está na base de dados:</string>
    <string name="aplicar_este_m_todo">Aplicar este método</string>
    <string name="novo_m_todo">Novo método</string>
    <string name="talhao_x">Talhao X</string>
    <string name="dias_para_contagem_0">Dias para contagem: 0</string>
    <string name="adicionar_talh_o">Adicionar Talhão</string>
    <string name="finalizar">Finalizar</string>
    <string name="encontrado">Encontrado</string>
    <string name="n_o_encontrado">Não encontrado</string>
    <string name="amostra">Amostra:</string>
    <string name="tamanho_da_cultura">Tamanho da Cultura:</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="todo">TODO</string>
    <string name="senha_atual">Senha atual:</string>
    <string name="nova_senha">Nova senha:</string>
    <string name="confirma_o">Confirmação:</string>
    <string name="repetir_nova_senha">Repetir nova senha:</string>
    <string name="sobre_n_s">Sobre nós</string>
    <string name="m_todos_de_controle_utilizados">Métodos de controle utilizados</string>
    <string name="textview23">TextView</string>

</resources>
