<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanoDeAmostragem"
    android:id="@+id/drawer_layout_plano_de_amostragem"
    android:fitsSystemWindows="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_plano_de_amostragem"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/tvPlantasPT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/n_mero_de_plantas_por_talh_o"
            android:textColor="#659251"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_plano_de_amostragem" />

    <TextView
        android:id="@+id/tvpontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/n_mero_de_pontos_por_talh_o"
        android:textColor="#659251"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlantasPT" />

    <TextView
        android:id="@+id/tvPlantasPonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/n_mero_de_plantas_por_ponto"
        android:textColor="#659251"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpontos" />

        <TextView
            android:id="@+id/tvNPlantasPorTalhao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/_01"
            android:textColor="#659251"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvPlantasPT"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_plano_de_amostragem" />

    <TextView
        android:id="@+id/tvNPontosPorTalhao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/_02"
        android:textColor="#659251"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvpontos"
        app:layout_constraintTop_toBottomOf="@+id/tvNPlantasPorTalhao" />

    <TextView
        android:id="@+id/tvNPlantasPorPonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/_03"
        android:textColor="#659251"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvPlantasPonto"
        app:layout_constraintTop_toBottomOf="@+id/tvNPontosPorTalhao" />

        <TextView
            android:id="@+id/tvplantaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="24dp"
            android:text="@string/planta"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnPresencaPraga"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvContagemPlantas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/_05"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnPresencaPraga"
            app:layout_constraintStart_toEndOf="@+id/tvplantaaa" />

        <TextView
            android:id="@+id/tvPalavraAmostragem"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/amostragem"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvplantaaa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ImgInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/imageminfo"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/tvplantaaa"
            app:layout_constraintStart_toEndOf="@+id/tvPalavraAmostragem"
            app:srcCompat="@drawable/ic_info_tentativa" />

        <Button
            android:id="@+id/btnPresencaPraga"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:background="#925158"
            android:text="@string/encontrado"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btnCorrige"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAusenciaPraga"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="8dp"
            android:background="#939393"
            android:text="@string/n_o_encontrado"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btnCorrige"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnFinalizarPlano"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="#659251"
            android:padding="10dp"
            android:text="@string/finalizar"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCorrige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#659251"
            android:text="@string/corrigir"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btnFinalizarPlano"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvNumAostras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/amostra"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnAusenciaPraga"
            app:layout_constraintEnd_toStartOf="@+id/tvContagemAmostras" />

        <TextView
            android:id="@+id/tvContagemAmostras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="24dp"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnAusenciaPraga"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_plano_de_amostragem"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />


</android.support.v4.widget.DrawerLayout>