<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout_aplicacoes_realizadas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:id="@+id/tvAutorAplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/autor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCulturaAplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAutorAplicacao"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:text="@string/cultura" />

    <TextView
        android:id="@+id/tvTalhaoAplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCulturaAplicacao"
        android:text="@string/talh_o"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvMetodoUtiizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTalhaoAplicacao"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/m_todo_aplicado"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDataAplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMetodoUtiizado"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/data_de_aplica_o"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvNumPlantasAplicacoesRealizadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDataAplicacao"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/plantas_amostradas"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvPopPragasAplicacoesRealizadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNumPlantasAplicacoesRealizadas"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/plantas_infestadas"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvPopPragasAplicacoesRealizadas"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider" />


</RelativeLayout>