<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_novo_dnvnovo"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/nomeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/nome_do_usu_rio"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />
    
    <TextView
        android:id="@+id/emailMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exemplo_gmail_com"
        android:layout_gravity="center"/>
</LinearLayout>